@@ -1,4 +1,5 @@
 changes in 1.4.0
+    - resolved issue #123 "Debug utility to access all annotations by type"
     - resolved issue #68 "Improve performance of selectCovered() using offsets"
     - resolved issue #90 "JCasUtil.isCovered() is named somewhat confusing"
     - resolved issue #104 "JCasUtil.selectCovered should accept AnnotationFS"
